--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,6 +1,6 @@
 - title: "Focal disruption of DNA methylation dynamics at enhancers in IDH-mutant AML cells"
   image: WilsonER.Leukemia.png
-  description: We use our atomic-scale scanning tunneling noise setup on a disordered superconductor, and discover a state above TC that, much like an ordinary metal, has no (pseudo)gap, but carries charge via paired electrons.
+  description: Comprehensive analysis of DNA methylation in primary AML samples with mutations in IDH1 and IDH2 demonstrated focal hypermethylation at regulatory enhancers, which may contribute to AML pathogenesis.
   authors: Wilson ER, Helton NM, Heath SE, Fulton RS, Payton JE, Welch JS, Walter MJ, Westervelt P, DiPersio JF, Link DC, Miller CA, Ley TJ, Spencer DH
   link:
     url: https://www.nature.com/articles/s41375-021-01476-y
