--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,5 +1,5 @@
 - name: David H. Spencer
-  photo: 
+  photo: dave.jpg
   info: Assistant professor, started July 2016
   email: dspencerlab@gmail.com
   number_educ: 0
