--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -12,4 +12,10 @@
   number_educ: 0
   education1:
 
+- name: Reza Ghasemi
+  photo: reza.JPG
+  info: Staff Scientist
+  email: 
+  number_educ: 1
+  education1: Reza trained in Medical Genetics in Iran and then earned his PhD in Italy. His work in the Spencer lab focuses on 3D genome architecture at the *HOXA* locus and how this regulates *HOXA* gene expression. He has used CRISPR/Cas9 and CRISPRi to understand how CTCF regulates genome iteractions that the *HOXA* locus. He was lead author on the first paper to publish HiC data from a primary AML samples and has made important contributions to all Spencer lab projects.
 
