new clinical section

--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,1 +1,15 @@
+- name: Ben Ozenberger
+  photo: 
+  info: Spencer lab's first hire
+  email: 
+  number_educ: 1
+  education1: Now a Genetics Grad student at U of Utah
+  education2:
 
+- name: Reuben Hogan
+  photo: 
+  info: Wash U Undergraduate MARC Scholar
+  email: 
+  number_educ: 1
+  education1: Now a MSTP at UCSF
+  education2: 
