new clinical section

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -5,7 +5,7 @@
   number_educ: 5
   education1: BS in Biochemistry (with Distinction), University of Washington, Seattle
   education2: MD and PhD (MSTP), University of Washington, Seattle
-  education3: Clinical Pathology and Molecular Genetic Patholog, Washington University in St. Louis
+  education3: Clinical Pathology and Molecular Genetic Pathology, Washington University in St. Louis
   education4: Assistant Professor of Medicine and Pathology and Immunology
   education5: Medical Director, McDonnell Genome Institute Clinical Sequencing Lab
 
