new clinical section

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -27,7 +27,7 @@
 
 - name: Ellie Wilson
   photo: ellie.JPG
-  info: Graduate student, DNA methylation and lab food guru
+  info: Graduate student, DNA methylation expert and local food guru
   email: 
   number_educ: 2
   education1: BA in Biology, Carleton College, Northfield, MN
