--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,4 +1,4 @@
-- name: <a href="{{ site.url }}{{ site.baseurl }}/dhsbio/" David H. Spencer MD, PhD</a>
+- name: David H. Spencer MD, PhD <a href="/dhsbio/">(view bio)</a>
   photo: dave.jpg
   info: Principal Investigator, chief troubleshooter and data wrangler
   email: dspencerlab@gmail.com
