--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -2,10 +2,10 @@
   photo: dave.jpg
   info: Principal Investigator, chief troubleshooter and data wrangler
   email: dspencerlab@gmail.com
-  number_educ: 3
-  education1: education4: Assistant Professor of Medicine and Pathology and Immunology
+  number_educ: 2
+  education1: Assistant Professor of Medicine and Pathology and Immunology
   education2: Medical Director, McDonnell Genome Institute Clinical Sequencing Lab
-  education3: Medical Director, McDonnell Genome Institute Clinical Sequencing Lab
+
   
 - name: Heidi Struthers
   photo: 
