--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -9,3 +9,7 @@
   info: Wash U Undergraduate MARC Scholar
   status: Now a MSTP at UCSF
 
+- name: Henry Wong
+  photo: 
+  info: MS&T Master's student, summer intern
+  status: Now at Sandia National Laboratories 
