--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -25,5 +25,15 @@
   link:
     url: https://www.nature.com/articles/s41375-020-0856-3 
     display: Leukemia. 2021 Feb;35(2):404-416.
-  highlight: 1
+  highlight: 0
   news2:
+
+- title: "DNMT3AR882-associated hypomethylation patterns are maintained in primary AML xenografts, but not in the DNMT3AR882C OCI-AML3 leukemia cell line."
+  image: chen.bcj.png
+  description: DNA methylation analysis of AML cell lines as appropriate models of AML-associated methylation phenotypes.
+  link:
+    url: https://www.nature.com/articles/s41408-018-0072-9
+    display: Blood Cancer J. 2018 Apr 4;8(4):38.
+  highlight: 0
+  news2:
+
