--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -31,6 +31,7 @@
 - title: "DNMT3AR882-associated hypomethylation patterns are maintained in primary AML xenografts, but not in the DNMT3AR882C OCI-AML3 leukemia cell line."
   image: chen.bcj.png
   description: DNA methylation analysis of AML cell lines as appropriate models of AML-associated methylation phenotypes.
+  authors: Chen D, Christopher M, Helton NM, Ferguson I, Ley TJ, Spencer DH.
   link:
     url: https://www.nature.com/articles/s41408-018-0072-9
     display: Blood Cancer J. 2018 Apr 4;8(4):38.
