--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -10,7 +10,7 @@
 
 - title: "Hematopoietic cell transplantation donor-derived memory-like NK cells functionally persist after transfer into patients with leukemia"
   image: none.png
-  description: foo
+  description: Hematopoietic cell transplantation donor-derived memory-like NK cells functionally persist after transfer into patients with leukemia
   authors: Berrien-Elliott MM, Foltz JA, Russler-Germain DA, Neal CC, Tran J, Gang M, Wong P, Fisk B, Cubitt CC, Marin ND, Zhou AY, Jacobs MT, Foster M, Schappe T, McClain E, Kersting-Schadek S, Desai S, Pence P, Becker-Hapak M, Eisele J, Mosior M, Marsala L, Griffith OL, Griffith M, Khan SM, Spencer DH, DiPersio JF, Romee R, Uy GL, Abboud CN, Ghobadi A, Westervelt P, Stockerl-Goldstein K, Schroeder MA, Wan F, Lie WR, Soon-Shiong P, Petti AA, Cashen AF, Fehniger TA
   link: 
       link: https://doi.org/10.1126/scitranslmed.abm1375
@@ -38,6 +38,16 @@
   highlight: 1
   news2:
 
+- title: " Remethylation of Dnmt3a-/- hematopoietic cells is associated with partial correction of gene dysregulation and reduced myeloid skewing"
+  image: none.png
+  description:  Remethylation of Dnmt3a-/- hematopoietic cells is associated with partial correction of gene dysregulation and reduced myeloid skewing
+  authors: Ketkar S, Verdoni AM, Smith AM, Bangert CV, Leight ER, Chen DY, Brune MK, Helton NM, Hoock M, George DR, Fronick C, Fulton RS, Ramakrishnan SM, Chang GS, Petti AA, Spencer DH, Miller CA, Ley TJ
+  link: 
+     link: https://doi.org/10.1073/pnas.1918611117
+     display:  Proc Natl Acad Sci U S A. 2020 Feb 11;117(6):3123-3134. 
+  highlight: 0
+  news2:
+  
 - title: "DNMT3AR882-associated hypomethylation patterns are maintained in primary AML xenografts, but not in the DNMT3AR882C OCI-AML3 leukemia cell line."
   image: chen.bcj.png
   description: DNA methylation analysis of AML cell lines as appropriate models of AML-associated methylation phenotypes.
