--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -13,7 +13,7 @@
   description: Hematopoietic cell transplantation donor-derived memory-like NK cells functionally persist after transfer into patients with leukemia
   authors: Berrien-Elliott MM, Foltz JA, Russler-Germain DA, Neal CC, Tran J, Gang M, Wong P, Fisk B, Cubitt CC, Marin ND, Zhou AY, Jacobs MT, Foster M, Schappe T, McClain E, Kersting-Schadek S, Desai S, Pence P, Becker-Hapak M, Eisele J, Mosior M, Marsala L, Griffith OL, Griffith M, Khan SM, Spencer DH, DiPersio JF, Romee R, Uy GL, Abboud CN, Ghobadi A, Westervelt P, Stockerl-Goldstein K, Schroeder MA, Wan F, Lie WR, Soon-Shiong P, Petti AA, Cashen AF, Fehniger TA
   link: 
-      link: https://doi.org/10.1126/scitranslmed.abm1375
+      url: https://doi.org/10.1126/scitranslmed.abm1375
       display: Sci Transl Med. 2022 Feb 23;14(633):eabm1375
   highlight: 0
   news2:
@@ -43,11 +43,21 @@
   description:  Remethylation of Dnmt3a-/- hematopoietic cells is associated with partial correction of gene dysregulation and reduced myeloid skewing
   authors: Ketkar S, Verdoni AM, Smith AM, Bangert CV, Leight ER, Chen DY, Brune MK, Helton NM, Hoock M, George DR, Fronick C, Fulton RS, Ramakrishnan SM, Chang GS, Petti AA, Spencer DH, Miller CA, Ley TJ
   link: 
-     link: https://doi.org/10.1073/pnas.1918611117
+     url: https://doi.org/10.1073/pnas.1918611117
      display:  Proc Natl Acad Sci U S A. 2020 Feb 11;117(6):3123-3134. 
   highlight: 0
   news2:
-  
+
+- title: "Inflammatory cytokines promote clonal hematopoiesis with specific mutations in ulcerative colitis patients"
+  image: none.png
+  description: Inflammatory cytokines promote clonal hematopoiesis with specific mutations in ulcerative colitis patients
+  authors: Zhang CRC, Nix D, Gregory M, Ciorba MA, Ostrander EL, Newberry RD, Spencer DH, Challen GA
+  link: 
+     url: https://doi.org/10.1016/j.exphem.2019.11.008
+     display: Exp Hematol. 2019 Dec;80:36-41.e3.
+  highlight: 0
+  news2:
+
 - title: "DNMT3AR882-associated hypomethylation patterns are maintained in primary AML xenografts, but not in the DNMT3AR882C OCI-AML3 leukemia cell line."
   image: chen.bcj.png
   description: DNA methylation analysis of AML cell lines as appropriate models of AML-associated methylation phenotypes.
