--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -251,7 +251,7 @@
 
 - title: "Direct-to-consumer genetic testing: reliable or risky?"
   image: none.png
-  description: Direct-to-consumer genetic testing\: reliable or risky?
+  description: Direct-to-consumer genetic testing&#58; reliable or risky?
   authors: Spencer DH, Lockwood C, Topol E, Evans JP, Green RC, Mansfield E, Tezak Z
   link: 
      url: https://doi.org/10.1373/clinchem.2011.167197
