--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,5 +1,5 @@
 - name: Heidi Struthers
-  photo: bio-photo.jpg
+  photo: heidi.png
   info: Lab Manager, deputy troubleshooter and chief lab safety officer 
   email: 
   number_educ: 0
