--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,3 +1,8 @@
+- name: Reza Ghasemi, PhD
+  photo: reza.JPG
+  info: Former postoc and staff scientist
+  status: Now a laboratory genetics and genomics trainee at Wash U
+  
 - name: Ben Ozenberger
   photo: 
   info: Spencer lab's first hire
