--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -18,3 +18,15 @@
   photo: 
   info: MS&T Master's student, summer intern
   status: Now at Sandia National Laboratories 
+
+- name: Alex Miller
+  photo: 
+  info: Bioinformatics Research Assistant, Texan
+  status: 
+
+- name: Ellie Wilson
+  photo: ellie.JPG
+  info: Graduate of the Wash U MGG PhD program!
+  status: Clinical scientist at Pairidex, Inc, St. Louis MO
+
+  
