--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -16,7 +16,7 @@
 
 - name: Emilee Kotnik
   photo: ekotnik.png
-  info: Post-doc, 
+  info: Post-doc, MGG Alum
   email: 
   number_educ: 2
   education1: BS, University of Michigan, Ann Arbor, MI
@@ -32,8 +32,8 @@
 
 - name: Nidhi Davarapalli
   photo: 
-  info: Bioinformatics scientist, 
+  info: Bioinformatic scientist, Nextflow guru 
   email: 
   number_educ: 2
-  education1: BA in Biology, Carleton College, Northfield, MN
-  education2: Internship at Hematologics, Inc. in Seattle, WA
+  education1: BS in Bioengineering, University of Illinois, Champaign-Urbana, IL
+ 
